Modification to work with angular project
